<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="28dp"
    android:paddingEnd="28dp"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    tools:context=".fragment.LoginFragment">

    <!-- Email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email_title"
        android:freezesText="true"
        android:drawableStart="@drawable/ic_email_24dp"
        android:drawableTint="@color/second_black"
        android:textSize="16sp"
        android:drawableBottom="@drawable/edittext_underline"
        android:inputType="textEmailAddress"/>

    <!-- Mật khẩu -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:freezesText="true"
            android:drawableStart="@drawable/ic_lock"
            android:drawableBottom="@drawable/edittext_underline"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:paddingEnd="48dp" />

        <ImageView
            android:id="@+id/password_toggle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_visibility"
            android:contentDescription="@string/show_password"/>
    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textSize="14sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_blue"
            android:textSize="14sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_policy_login"
        android:textSize="13sp"
        android:layout_marginTop="10dp"/>

</LinearLayout>