<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <!-- Email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email_title"
            android:drawableStart="@drawable/ic_email_24dp"
            android:drawableTint="@color/second_black"
            android:textSize="16sp"
            android:drawableBottom="@drawable/edittext_underline"
            android:inputType="textEmailAddress"/>

        <!-- Code -->
        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:hint="@string/code_title"
            android:drawableStart="@drawable/ic_lock"
            android:drawableBottom="@drawable/edittext_underline"
            android:textSize="16sp"
            android:inputType="text"
            android:layout_marginTop="12dp"/>

        <!-- Mật khẩu -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawableBottom="@drawable/edittext_underline"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:layout_marginTop="12dp"/>

        <!-- Nhập lại mật khẩu -->
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawableBottom="@drawable/edittext_underline"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:background="@drawable/button_rounded"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_policy_register"
            android:textSize="13sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>
