<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="@android:color/white">

    <!-- Logo -->
<!--    <ImageView-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="120dp"-->
<!--        android:src="@drawable/tlu"-->
<!--        android:contentDescription="Logo"-->
<!--        android:layout_marginBottom="20dp"/>-->

    <!-- Tiêu đề -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_blue"
        android:layout_marginBottom="20dp"/>

    <!-- Đăng nhập - Đăng ký -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/second_black"
            android:textSize="16sp"
            android:paddingEnd="16dp"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="@color/primary_blue"
            android:textStyle="bold"
            android:textSize="16dp"/>
    </LinearLayout>
    <!-- Họ tên -->
    <EditText
        android:id="@+id/edt_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/person_title"
        android:drawableStart="@drawable/ic_person"
        android:padding="12dp"
        android:textSize="14sp"
        android:inputType="text"
        android:layout_marginTop="12dp"/>

    <!-- Mã cán bộ/mã sinh viên -->
    <EditText
        android:id="@+id/edt_id_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_person"
        android:drawableStart="@drawable/ic_lock"
        android:padding="12dp"
        android:textSize="14sp"
        android:layout_marginTop="12dp"/>
    <!-- Email -->
    <EditText
        android:id="@+id/edt_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_title"
        android:drawableStart="@drawable/ic_email_24dp"
        android:padding="12dp"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"/>

    <!-- Mật khẩu -->
    <EditText
        android:id="@+id/edt_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_title"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_visibility"
        android:padding="12dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <!-- Nhập lại mật khẩu -->
    <EditText
        android:id="@+id/edt_confirm_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_visibility"
        android:padding="12dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

<!--    &lt;!&ndash; OTP &ndash;&gt;-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center_vertical"-->
<!--        android:layout_marginBottom="20dp">-->

<!--        <EditText-->
<!--            android:id="@+id/otp"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:hint="Mã OTP"-->
<!--            android:drawableStart="@drawable/ic_lock"-->
<!--            android:padding="12dp"-->
<!--            android:textSize="14sp"-->
<!--            android:inputType="number"/>-->

<!--        <Button-->
<!--            android:id="@+id/btn_send_otp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Gửi OTP"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:background="@drawable/button_round"-->
<!--            android:paddingHorizontal="16dp"-->
<!--            android:layout_marginStart="10dp"/>-->
<!--    </LinearLayout>-->

    <!-- Nút đăng ký -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:background="@drawable/button_round"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"/>

    <!-- Điều khoản -->
    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_text"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/second_black"/>
</LinearLayout>
