<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/tlu"
        android:contentDescription="Logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_blue"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/primary_blue"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingEnd="12dp"
            android:paintFlags="0x08"/> <!-- Gạch chân -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng ký"
            android:textColor="@color/second_black"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- Email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_title"
        android:drawableStart="@drawable/ic_email_24dp"
        android:drawableTint="@color/second_black"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:textSize="14sp"
        android:drawableBottom="@drawable/edittext_underline"
        android:inputType="textEmailAddress"/>


    <!-- Mật khẩu -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Mật khẩu"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_visibility"
        android:padding="12dp"
        android:drawableBottom="@drawable/edittext_underline"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_marginBottom="12dp"/>

    <!-- CheckBox và Quên mật khẩu -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textSize="14sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_blue"
            android:textStyle="bold"
            android:textSize="14sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bằng cách đăng nhập, bạn đồng ý với Điều khoản và chính sách của chúng tôi"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

</LinearLayout>
