<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/tlu"
        android:contentDescription="Logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_blue"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/primary_blue"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingEnd="12dp" /> <!-- Gạch chân -->

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng ký"
            android:textColor="@color/second_black"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Email -->
    <EditText
        android:id="@+id/edt_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_title"
        android:drawableStart="@drawable/ic_email_24dp"
        android:drawableTint="@color/second_black"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:textSize="14sp"
        android:drawableBottom="@drawable/edittext_underline"
        android:inputType="textEmailAddress"/>


    <!-- Mật khẩu -->
    <EditText
        android:id="@+id/edt_password_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Mật khẩu"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_visibility"
        android:padding="12dp"
        android:drawableBottom="@drawable/edittext_underline"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_marginBottom="12dp"/>

    <!-- Ghi nhớ mật khẩu & Quên mật khẩu -->
    <LinearLayout
        android:id="@+id/password_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textSize="14sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_blue"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <!-- Điều khoản -->
    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_text"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/second_black" />

</LinearLayout>