<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Ảnh đại diện -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/my_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user_avatar"
        app:strokeColor="@color/primary_blue"
        app:strokeWidth="1dp"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/my_avatar"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <!-- Tên người dùng -->
        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_name_mockup"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp" />

        <!-- Chức danh -->
        <TextView
            android:id="@+id/my_info_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_contact_info_mockup"
            android:textSize="14sp"
            android:layout_marginStart="12dp" />

        <!-- Nút Chỉnh sửa -->
        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_title"
            android:textColor="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:drawableStart="@drawable/ic_edit"
            android:background="@drawable/button_round"
            android:layout_marginTop="4dp"
            android:minHeight="0dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

</RelativeLayout>